# passphrase-identity

./: .gitignore  README.markdown  configure.ac
gui/: Makefile.am  gui.glade  main.c
man/: passphrase-identity.1
src/: Makefile.am  core.c  core.h  gui.glade  main-gui.c  main.c  profile.c
